# ToGetMathTable

./: AndroidManifest.xml  CMakeLists.txt  DesignTokens.qml  DrawerNavItem.qml  FactorialPage.qml  Main.qml  MathTablePage.qml  PremiumButton.qml  PremiumTextField.qml  PrimePage.qml  ResultCard.qml  To Get Math Table Working Docs.odt  com.madhav.ToGetMathTable.desktop  icon.qrc  main.cpp  mathtable.cpp  mathtable.h
android/res/drawable/: icon.xml
android/res/values/: colors.xml  strings.xml  styles.xml
